<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_transactions" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_mine" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_account"/>
    </group>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>
