<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_account"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passphrase_info"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_info_black_24dp"
        android:drawablePadding="5dp"
        android:textSize="12sp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_passphrase1"
            android:inputType="text"
            android:hint="@string/passphrase_label_1"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_passphrase2"
            android:inputType="text"
            android:hint="@string/passphrase_label_2"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_contact"
            android:inputType="phone"
            android:hint="@string/countrycode"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttongradient"
        android:padding="10dp"
        android:elevation="2dp"
        android:id="@+id/update_crypto_account"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>