<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="3dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/transactionLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type_label"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:id="@+id/transaction_type"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_account_label"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:id="@+id/transaction_account"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_account_hash"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:id="@+id/transaction_account_hash"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_amount_label"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_balance"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:id="@+id/transaction_amount"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_date_label"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:id="@+id/transaction_date"
                />
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>