<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="5dp"
    android:layout_margin="5dp">
    <include
        layout="@layout/app_divider_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_public_address"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:text="@string/sample_account_hash"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/coins_for_sale"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coins_for_sale"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/sample_coins"
            android:layout_margin="5dp"
            android:padding="5dp"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttongradient"
        android:layout_gravity="center_horizontal"
        android:text="@string/buy_ccw"
        android:drawablePadding="5dp"
        android:padding="2dp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:elevation="4dp"
        android:textSize="16sp"
        android:fontFamily="serif-monospace"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        android:id="@+id/buy_ccw"/>
</LinearLayout>