<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ultimustech.cryptowallet.views.fragments.MineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorWhite"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mining_account_hash"
                android:inputType="textEmailAddress"
                android:fontFamily="monospace"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:shadowColor="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal"
            android:text="@string/scan_account_qr"
            android:padding="2dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:elevation="4dp"
            android:fontFamily="monospace"
            android:textColor="@color/colorWhite"
            android:id="@+id/scan_qr"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/start_mining"
                android:padding="2dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:elevation="4dp"
                android:fontFamily="monospace"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:id="@+id/start_mining"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/stop_mining"
                android:padding="2dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:elevation="4dp"
                android:fontFamily="monospace"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:id="@+id/stop_mining"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/free_mining"
                android:padding="2dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:elevation="4dp"
                android:fontFamily="monospace"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:id="@+id/free_mining"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:text="@string/free_mining_warning"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginTop="5dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/withdraw"
                android:padding="2dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:elevation="4dp"
                android:fontFamily="monospace"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:id="@+id/withdraw"/>

    </LinearLayout>
</FrameLayout>
